tests/NormalTests/paczka1/fuzzy1/53079684.err
Error in line 2: S74 A718 37,7
Error in line 8: Q1eDGecV A481 37,3
Error in line 21: NpLT S74 42,7
Error in line 23: Uj40K S74 75,4
Error in line 18: S74 S74 77,9
Error in line 36: Q1eDGecV A481 51,7
